tests/paczka1/fuzzy1/41824806.err
Error in line 2: 57edf55hGy A956 22,9
Error in line 8: 57edf55hGy S81 53,30
Error in line 10: Si0UF A956 83,7
Error in line 3: 57edf55hGy S574 26,9
Error in line 20: BumZq9d S81 57,9
